# aoc2023

./: .gitignore  pyproject.toml
classes/: solver.py  test_solver.py
days/: day1.py  test_day1.py
days/day1/: day1.py  day1_test.py
inputs/day10/: tutorial1.txt
inputs/day9/: mini_input.txt
inputs/tests/: test1.txt
src/aoc2023/classes/: solver.py
src/aoc2023/days/: day1.py  day10.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
tests/: test_day1.py  test_day10.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py  test_solver.py
